Progress bar & Selected Item

--- a/KeyHelperForms/KeyHelperForms.csproj
+++ b/KeyHelperForms/KeyHelperForms.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Character.cs" />
     <Compile Include="KeyThread.cs" />
     <Compile Include="KeyThreadArray.cs" />
     <Compile Include="MainForm.cs">
@@ -55,6 +56,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ProcessHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Variables.cs" />
